# pals-python

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  demo.py  environment.yml  pyproject.toml  requirements.txt  schema_test.py
.github/workflows/: unit_tests.yaml  unit_tests.yml
examples/: fodo.py
schema/: BaseElement.py  BeamLine.py  DriftElement.py  ElementWrapper.py  Item.py  Line.py  MagneticMultipoleParameters.py  QuadrupoleElement.py  ThickElement.py
schema/elements/: Marker.py  SBend.py
schema/elements/base/: Thick.py  Thin.py
src/pals/: BeamLine.py  __init__.py
src/pals/kinds/: ACKicker.py  BaseElement.py  BeamBeam.py  BeamLine.py  BeginningEle.py  Converter.py  CrabCavity.py  Drift.py  EGun.py  Feedback.py  Fiducial.py  FloorShift.py  Foil.py  Fork.py  Girder.py  Instrument.py  Kicker.py  Marker.py  Mask.py  Match.py  Multipole.py  NullEle.py  Octupole.py  Patch.py  Quadrupole.py  RBend.py  RFCavity.py  SBend.py  Sextupole.py  Solenoid.py  Taylor.py  UnionEle.py  Wiggler.py  __init__.py  _warnings.py  all_elements.py
src/pals/kinds/mixin/: BaseElement.py  ThickElement.py  ThinElement.py  __init__.py  all_element_mixin.py
src/pals/kinds/utils/: __init__.py
src/pals/parameters/: ApertureParameters.py  BeamBeamParameters.py  BendParameters.py  BodyShiftParameters.py  ElectricMultipoleParameters.py  FloorParameters.py  FloorShiftParameters.py  ForkParameters.py  MagneticMultipoleParameters.py  MetaParameters.py  PatchParameters.py  RFParameters.py  ReferenceChangeParameters.py  ReferenceParameters.py  SolenoidParameters.py  TrackingParameters.py  __init__.py
src/pals_schema/: BeamLine.py
tests/: test_elements.py  test_parameters.py  test_schema.py  test_serialization.py
utils/: io.py
